[tool.poetry]
name = "atcoder-util-problem"
version = "0.1.0"
description = ""
authors = ["edge2992 <torune.summer@gmail.com>"]
readme = "README.md"
packages = [{include = "atcoder_util_problem"}]

[tool.poetry.scripts]
atcoder-util-problem = "atcoder_util_problem.__main__:main"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.6"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
pandas = "^2.0.3"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[tool.black]
line-length = 79


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
